--- a/releases/v1.0.4
+++ b/releases/v1.0.4
@@ -1,3 +1,12 @@
+Highlights:
+* Deadlock detector will now show all workflow threads making debugging easier.
+* SDK will no longer use illegal reflective access during exception unwrapping.
+* Fixed a bug with missing cancellation in child sub-scopes.
+* Added binary checksum to the worker options, which can now be used in the auto-reset.
+* Added an option to run only workflow task and local activity pollers.
+* Fixed an issue with eager activity task pre-fetching which could be causing activity timeouts when all handlers are busy.
+
+All changes:
 2020-11-06 - ac9805c4 - Use JSR250 javax.annotation-api when compiling serviceclient with JDK 9 and up. (#231)
 2020-11-06 - d1ea450c - Added dump of all workflow thread to the deadlock detector (#246)
 2020-11-10 - aa04a4b8 - Fix NPE in sticky poller (#249)
