--- a/releases/v1.0.5
+++ b/releases/v1.0.5
@@ -2,7 +2,7 @@
 
 * Add dynamic workflow and activity implementation support.
 * Add support for MaxConcurrentActivityExecutionSize for async activities.
-* Add helper methods for setting cloud sslContext.
+* Add helper methods for setting sslContext.
 
 #All changes
 
