--- a/releases/v1.0.5
+++ b/releases/v1.0.5
@@ -3,7 +3,7 @@
 * Add dynamic workflow and activity implementation support.
 * Add support for MaxConcurrentActivityExecutionSize for async activities.
 * Add helper methods for setting sslContext.
-* Improvements to interceptor related to inbound / outbound traffic headers
+* Interceptor refactoring to support headers
 
 #All changes
 
