--- a/releases/v1.0.7
+++ b/releases/v1.0.7
@@ -30,3 +30,4 @@ All changes
 2021-04-06 - 0c5ae20 - Dependency Update (#428)
 2021-04-06 - b642a75 - Fixed timeout property documentation (#411)
 2021-04-08 - fd28e21 - Polish temporal-opentracing module (#430)
+2021-04-09 - dffa6ee - Disable flaky tests until they are fixed (#427)
