--- a/releases/v1.0.8
+++ b/releases/v1.0.8
@@ -5,7 +5,7 @@ through the activityStub, WorkflowImplementationOptions, and on a workflow.
 * Added context propagation for local activities
 * Option to set initial time for workflow tests
 * Implemented a Health Check. By default it's on and checks if the server is up
-every 5s. If the server is not up in 10s, the worker will not sart. It may break
+every 5s. If the server is not up in 10s, the worker will not start. It may break
 those users that deploy workers while server is not up. Please configure in 
 WorkflowServiceStubsOptions.
 
