Update release notes for 1.20.1

--- a/releases/v1.20.1
+++ b/releases/v1.20.1
@@ -10,3 +10,4 @@ in the DataConverter interface.
 2023-06-29 - 9a457157 - Generate bom using java-platform plugin (#1796)
 2023-07-03 - 15337d9a - Add Semgrep scanning (#1775)
 2023-07-10 - 25387be8 - Add default methods for exceptionToFailure and failureToException (#1809)
+2023-07-13 - f30d3496 - Add description to bom project (#1813)
