--- a/releases/v1.26.2
+++ b/releases/v1.26.2
@@ -1,7 +1,7 @@
 # Bugfixes
 
 ## Spring Boot
-* Fixed a issue where Workflows could not be registered if they used a constructor to autowire.
+* Fixed an issue where Workflows could not be registered if they used a constructor to autowire.
 
 ## Nexus
 * Fixed a issue where some Workflow options were not passed when using `WorkflowClientOperationHandlers`.
