--- a/releases/v1.26.2
+++ b/releases/v1.26.2
@@ -4,7 +4,7 @@
 * Fixed an issue where Workflows could not be registered if they used a constructor to autowire.
 
 ## Nexus
-* Fixed a issue where some Workflow options were not passed when using `WorkflowClientOperationHandlers`.
+* Fixed an issue where some Workflow options were not passed when using `WorkflowClientOperationHandlers`.
 
 # What's Changed
 
